--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "slundquist.github.io",
-  "version": "1.0.0",
-  "description": "My personal portfolio as a web developer.",
+  "version": "0.0.0",
+  "description": "My portfolio as a web developer.",
+  "homepage": "slundquist.github.io",
   "main": "index.js",
   "type": "module",
+  "author": "Silas Lundquist",
+  "email": "silaslundquist@gmail.com",
+  "license": "MIT", 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "gulp": "gulp"
   },
-  "author": "Silas Lundquist",
-  "license": "ISC",
+
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SLundquist/slundquist.github.io"
+  },
+
   "devDependencies": {
     "browser-sync": "^3.0.3",
     "gulp": "^5.0.0",
