Website Redesign WIP
Added Prettier config file
Started reworking the site (again)

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "email": "silaslundquist@gmail.com",
   "license": "MIT", 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "gulp": "gulp"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
 
   "repository": {
